# rash

./: README.md  cabal.project.freeze  default.nix  rash.cabal  shell.nix  static.nix
app/: Main.hs
examples/: add.rash  guess-number.rash
nix/: common.nix
src/: Main.hs
src/Rash/: Array.hs  EndModel.hs  IOStateKeeping.hs  InternalRepresentation.hs  Interpreter.hs  ParsedRepresentation.hs  Parser.hs  Runner.hs  SequenceUtilities.hs  StateDirGetter.hs  TemporaryModel.hs  Utilities.hs
src/Rash/Representation/: Internal.hs  Parse.hs  ParseToInternal.hs
test/: InterpreterTests.hs  Test.hs
test/programs/: add.rash
