cabal-version:      3.4
name:               rash
version:            0.1.0.0
synopsis:           An asynchronous shell
license:            AGPL-3.0-or-later
license-file:       COPYING
author:             Niels G. W. Serup
maintainer:         ngws@metanohi.name
build-type:         Simple
extra-doc-files:    README.md

executable rash
    ghc-options: -Wall
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <4.20
      , containers
      , mtl
      , array
      , parsec
      , text
      , process
      , filepath
      , directory
      , shell-escape
    hs-source-dirs:   src
    other-modules:
        Rash.SequenceUtilities
        Rash.Representation.Parse
        Rash.Representation.Internal
        Rash.Representation.ParseToInternal
        Rash.Parser
        Rash.IOStateKeeping
        Rash.Interpreter
        Rash.StateDirGetter
    default-language: GHC2021
    default-extensions:
      LambdaCase
