cabal-version:      3.4
name:               rash
version:            0.1.0.0
synopsis:           An asynchronous shell
license:            AGPL-3.0-or-later
license-file:       COPYING
author:             Niels G. W. Serup
maintainer:         ngws@metanohi.name
build-type:         Simple
extra-doc-files:    README.md

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      LambdaCase

library
    import:           common
    build-depends:
        base >=4.14 && <4.20
      , containers
      , mtl
      , array
      , parsec
      , text
      , process
      , filepath
      , directory
      , shell-escape
    hs-source-dirs:   src
    exposed-modules:
        Rash.Interpreter
        Rash.Representation.Internal
        Rash.StateDirGetter
    other-modules:
        Rash.Array
        Rash.Representation.Parse
        Rash.Representation.ParseToInternal
        Rash.Parser
        Rash.IOStateKeeping

executable rash
    import:           common
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <4.20
      , filepath
      , directory
      , rash
    hs-source-dirs:   app

test-suite rash-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:
        Paths_rash
        InterpreterTests
    build-depends:
        base >=4.14 && <4.20
      , tasty
      , tasty-hunit
      , rash
    data-files: examples/*
